Fixed issue when screen too small

--- a/protosite/css/protosite.css
+++ b/protosite/css/protosite.css
@@ -40,6 +40,7 @@ body {
 /*==================header=================*/
 
 header{
+    width: 1024px;
 height:200px;
 background:-webkit-linear-gradient(left, lightgray,#003e6b); 
 background:-ms-linear-gradient(left, lightgray,#003e6b); 
@@ -53,6 +54,7 @@ background:linear-gradient(left, lightgray,#003e6b);
 /*===================nav=================*/
 nav {
     clear: both;
+    width: 1024px;
     height: 40px;
     margin: 0 auto;
     background-color: #003e6b;
@@ -94,12 +96,14 @@ nav > ul > li> a {
 /*===================main=================*/
 
 main {
-    
+    width: 780px;
+    margin: 0 auto;
 }
 
  main section {
 	width: 600px;
 	float:left;
+    margin-top: 20px;
 }
 
 main section > h2 {
@@ -189,11 +193,28 @@ padding-bottom: 10px;
 }
 
 aside{
+    margin-top: 68px;
     width: 33.7%;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     float: right;
     padding: 10px;
     position: relative;
     box-shadow: 0px 0px 2px #fff;
+    border: 2px dashed #003e6b;
+}
 
+aside h3 {
+    margin-top: 5px;
+    margin-left: 5px;
+    border: 2px solid #003e6b;
+    border-width: 0px 0px 2px 0px;
+}
+
+aside ul {
+    margin-left: 25px;
+    padding-left: 0px;
+}
+
+aside li {
+    list-style-type: disc
 }
